# theoremc

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml  coverage-main.yml
crates/test-helpers/: Cargo.toml
crates/test-helpers/src/: lib.rs
crates/theoremc-core/: Cargo.toml
crates/theoremc-core/src/: canonical_action_name.rs  collision.rs  collision_referenced_tests.rs  collision_test_helpers.rs  collision_tests.rs  lib.rs  mangle.rs  mangle_golden.rs  mangle_harness.rs  mangle_path.rs  mangle_tests.rs  path_format.rs  theorem_file.rs  theorem_file_tests.rs
crates/theoremc-core/src/schema/: action_name.rs  arg_value.rs  arg_value_tests.rs  diagnostic.rs  error.rs  expr.rs  identifier.rs  loader.rs  loader_action_tests.rs  loader_decode_location.rs  loader_decode_location_tests.rs  loader_diagnostic_tests.rs  loader_message.rs  loader_tests.rs  mod.rs  newtypes.rs  raw.rs  raw_action.rs  raw_action_tests.rs  raw_location_tests.rs  rust_type.rs  step.rs  test_fixtures.rs  test_support.rs  types.rs  types_tests.rs  validate.rs  validate_actions.rs  validate_evidence.rs  validate_expressions.rs  validate_fields.rs  validate_reason_markers.rs  validate_steps.rs  validate_tests.rs  validate_types.rs  validation_reason.rs  value.rs
crates/theoremc-core/tests/fixtures/: bound_lifetime_bare_fn.theorem  bound_lifetime_trait_object.theorem  duplicate_theorem_keys.theorem  free_lifetime_forall.theorem  invalid_forall_type.theorem  valid_full.theorem
crates/theoremc-macros/: Cargo.toml
crates/theoremc-macros/src/: action_probe_tests.rs  lib.rs  tests.rs  tests_support.rs  type_probe_tests.rs
crates/theoremc-macros/src/action_probe_tests/: action_signature_index.rs
crates/theoremc-macros/src/snapshots/: theoremc_macros__tests__expansion_golden.snap
crates/theoremc-macros/tests/: expand.rs
crates/theoremc-macros/tests/expand/: conflicting_action_signatures.rs  conflicting_action_signatures.stderr  conflicting_action_signatures.theorem  equivalent_action_signatures.rs  equivalent_action_signatures.theorem  invalid_theorem.rs  invalid_theorem.stderr  invalid_theorem.theorem  missing_action_export.rs  missing_action_export.stderr  missing_action_export.theorem  missing_kani_evidence.rs  missing_kani_evidence.stderr  missing_kani_evidence.theorem  missing_referenced_type.rs  missing_referenced_type.stderr  missing_referenced_type.theorem  missing_theorem.rs  missing_theorem.stderr  moved_referenced_type.rs  moved_referenced_type.stderr  moved_referenced_type.theorem  signature_drift.rs  signature_drift.stderr  signature_drift.theorem  typed_action_probe.rs  typed_action_probe.theorem  valid_theorem.rs  valid_theorem.theorem  zero_unwind.rs  zero_unwind.stderr  zero_unwind.theorem
docs/: adr-0001-theorem-symbol-stability-and-non-vacuity-policy.md  adr-0002-library-first-internationalization-and-localization-with-fluent.md  adr-001-theorem-symbol-stability-and-non-vacuity-policy.md  adr-002-library-first-internationalization-and-localization-with-fluent.md  adr-003-architectural-boundary-enforcement.md  adr-004-action-signature-specification.md  complexity-antipatterns-and-refactoring-strategies.md  contents.md  developers-guide.md  documentation-style-guide.md  localizable-rust-libraries-with-fluent.md  name-manging-rules.md  name-mangling-rules.md  reliable-testing-in-rust-via-dependency-injection.md  repository-layout.md  roadmap.md  rust-doctest-dry-guide.md  rust-testing-with-rstest-fixtures.md  scripting-standards.md  theorem-file-specification.md  theoremc-design.md  theoremc-development-roadmap.md  users-guide.md
docs/execplans/: 1-1-1-theorem-doc-and-subordinate-schema-types.md  1-2-1-validate-required-fields-and-non-empty-constraints.md  1-2-2-parse-assume-prove-and-witness-expressions.md  1-2-3-enforce-step-and-let-binding.md  1-2-4-enforce-non-vacuity-defaults.md  1-3-1-structured-diagnostics-for-parser-failures.md  2-1-1-canonical-action-name-validation.md  2-1-2-action-mangling.md  2-1-3-fail-compilation-on-duplicate-action-names.md  2-2-1-per-file-naming-using-path-mangle-and-hash12.md  2-2-2-deterministic-harness-naming.md  2-3-1-argument-decoding-for-plain-yaml-strings.md  2-3-2-optional-literal-text-wrapper.md  2-3-3-struct-literal-synthesis-from-yaml-maps.md  3-1-1-build-rs-scanning-of-theorems.md  3-1-2-generate-out-dir-theorem-suite-rs.md  3-2-1-stable-per-file-module-macro-expansions.md  3-2-2-gate-generated-kani-harnesses.md  3-3-1-emit-typed-action-probes.md  3-3-2-referenced-type-probes-for-generated-struct-literal-synthesis.md  code-base-audit-2026-06-05.md  codebase-audit-2026-06-14.md
src/: arg_lowering.rs  arg_lowering_compile_fail_tests.rs  arg_lowering_tests.rs  build_discovery.rs  build_discovery_tests.rs  build_suite.rs  build_suite_tests.rs  collision.rs  collision_tests.rs  lib.rs  main.rs  mangle.rs  mangle_golden.rs  mangle_harness.rs  mangle_path.rs  mangle_tests.rs  mangle_validate.rs
src/schema/: action_name.rs  arg_value.rs  arg_value_tests.rs  diagnostic.rs  error.rs  expr.rs  identifier.rs  loader.rs  loader_duplicate_tests.rs  loader_tests.rs  mod.rs  raw.rs  raw_action.rs  source_id.rs  step.rs  types.rs  validate.rs
tests/: action_mangle_bdd.rs  arg_decode_bdd.rs  arg_lowering_compile_fail.rs  build_discovery_bdd.rs  build_suite_bdd.rs  collision_bdd.rs  common_helpers.rs  common_support.rs  harness_naming_bdd.rs  module_naming_bdd.rs  schema_action_name_bdd.rs  schema_bdd.rs  schema_deser.rs  schema_deser_reject.rs  schema_diagnostics_bdd.rs  schema_diagnostics_snapshot.rs  schema_fixture_corpus.rs  schema_vacuity_bdd.rs  theorem_file_macro_bdd.rs
tests/common/: fixture_crate.rs  mod.rs  schema_fixtures.rs
tests/features/: action_mangle.feature  arg_decode.feature  build_discovery.feature  build_suite.feature  collision.feature  harness_naming.feature  module_naming.feature  schema_action_name.feature  schema_diagnostics.feature  schema_vacuity.feature  theorem_file_macro.feature
tests/fixtures/: invalid_action_empty_segment.theorem  invalid_action_keyword_segment.theorem  (+55 more)
(+7 files in other folders)
