[workspace]
members = ["crates/theoremc-core", "crates/theoremc-macros"]
resolver = "2"

[package]
name = "theoremc"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
test-support = ["theoremc-core/test-support"]

[dependencies]
indexmap = { version = "2.13.0", features = ["serde"] }
thiserror = "2.0.18"
syn = { version = "2.0.117", default-features = false, features = ["parsing", "full", "clone-impls", "printing"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
theoremc-core = { version = "0.1.0", path = "crates/theoremc-core" }
theoremc-macros = { version = "0.1.0", path = "crates/theoremc-macros" }

[build-dependencies]
camino = "1.2.2"
cap-std = { version = "4.0.2", features = ["fs_utf8"] }
thiserror = "2.0.18"

[dev-dependencies]
rstest = "0.26.1"
rstest-bdd = "0.5.0"
rstest-bdd-macros = "0.5.0"
tempfile = "3.15.0"
camino = "1.2.2"
cap-std = { version = "4.0.2", features = ["fs_utf8"] }

[[test]]
name = "action_mangle_bdd"
required-features = ["test-support"]

[[test]]
name = "module_naming_bdd"
required-features = ["test-support"]

[[test]]
name = "harness_naming_bdd"
required-features = ["test-support"]

[[test]]
name = "build_discovery_bdd"

[[test]]
name = "build_suite_bdd"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes                    = "deny"
allow_attributes_without_reason     = "deny"
blanket_clippy_restriction_lints    = "deny"
cognitive_complexity                = "deny"
needless_pass_by_value              = "deny"
implicit_hasher                     = "deny"

# 2. debugging leftovers
dbg_macro                           = "deny"
print_stdout                        = "deny"
print_stderr                        = "deny"

# 2. panic-prone operations
unwrap_used                         = "deny"
expect_used                         = "deny"
indexing_slicing                    = "deny"
string_slice                        = "deny"
integer_division                    = "deny"
integer_division_remainder_used     = "deny"
panic_in_result_fn                  = "deny"
unreachable                         = "deny"

# 4. portability
host_endian_bytes                   = "deny"
little_endian_bytes                 = "deny"
big_endian_bytes                    = "deny"

# 5. nursery idiom polish
let_underscore_must_use             = "deny"
or_fun_call                         = "deny"
option_if_let_else                  = "deny"
self_named_module_files             = "deny"
shadow_reuse                        = "deny"
shadow_same                         = "deny"
shadow_unrelated                    = "deny"
str_to_string                       = "deny"
string_lit_as_bytes                 = "deny"
try_err                             = "deny"
unneeded_field_pattern              = "deny"
use_self                            = "deny"

# 6. numerical foot-guns
float_arithmetic                    = "deny"
cast_possible_truncation            = "deny"
cast_possible_wrap                  = "deny"
cast_precision_loss                 = "deny"
lossy_float_literal                 = "deny"

# 7. API ergonomics
missing_const_for_fn                = "deny"
must_use_candidate                  = "deny"
unused_async                        = "deny"

# 8. Error handling
missing_panics_doc                  = "deny"
error_impl_error                    = "deny"
result_large_err                    = "deny"

[workspace.lints.rust]
missing_docs                        = "deny"

[workspace.lints.rustdoc]
missing_crate_level_docs            = "deny"

[lints]
workspace = true
