[package]
name = "theoremc-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
test-support = []

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.23"
indexmap = { version = "2.13.0", features = ["serde"] }
thiserror = "2.0.18"
syn = { version = "2.0.117", default-features = false, features = ["parsing", "full", "clone-impls", "printing"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
blake3 = "1.8.5"
camino = "1.2.2"
cap-std = { version = "4.0.2", features = ["fs_utf8"] }

[dev-dependencies]
proptest = "1"
rstest = "0.26.1"
tempfile = "3"

[lints]
workspace = true
