[package]
name = "theoremc-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
camino = "1.2.2"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", default-features = false, features = ["parsing", "full", "clone-impls", "printing", "proc-macro"] }
theoremc-core = { version = "0.1.0", path = "../theoremc-core" }
thiserror = "2.0.18"

[dev-dependencies]
cap-std = { version = "4.0.2", features = ["fs_utf8"] }
googletest = "0.14.3"
insta = "1.47.2"
prettyplease = "0.2.37"
pretty_assertions = "1.4.1"
proptest = "1.11.0"
rstest = "0.26.1"
tempfile = "3.15.0"
test-helpers = { version = "0.1.0", path = "../test-helpers" }
trybuild = { version = "1.0.116", features = ["diff"] }

[lints]
workspace = true
